fixed an issue with the buttons and made the icons visible onclick

--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,17 @@ opacity: .5;
     opacity: 1;
     font-size: 1.5rem;
 }
+
+.display #computerChoice {
+    height: 180px;
+    width: 180px;
+}
+
+.display #playerChoice {
+    height: 180px;
+    width: 180px;
+}
+
+.display img {
+    visibility: hidden;
+}
